[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
biscotti = "0.3.4"
cargo-manifest = "0.17.0"
fhtml = "0.6.1"
jsonwebtoken = "9.3.0"
leaky-bucket-lite = { git = "https://github.com/chris-windsor/leaky-bucket-lite.git" }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "uuid"] }
tokio = "1.28.2"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
